HttpCache: Don't clip range to concurrent incomplete full fetch

In PartialData::UpdateFromStoredHeaders, the data stream size in cache
isn't a reliable notion of the total size of resource if we're still
fetching it. Use Content-Length, if available, for that instead.


Bug: 822413
Change-Id: I36f09b6d72336385755cd4a1ea22da345b541d67
Reviewed-on: https://chromium-review.googlesource.com/973918
Commit-Queue: Maks Orlovich <morlovich@chromium.org>
Reviewed-by: Helen Li <xunjieli@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545454}
Former-commit-id: d19c827f4be7a6b81232f7a703921e82fe64f629